examples/test/testpolicy4440.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4440
  namespace: namespace321
spec:
  podSelector:
    matchLabels:
      key47: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value18
          key18: value44
      podSelector:
        matchLabels:
          key16: value44
          key9: value18
          key49: value37
